apiproduct/tracks/tracks-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tracks
  namespace: tracks
  labels:
    app: tracks-rest-api-1.0
  # annotations:
  #   delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  # parentRefs:
  #   - name: gw
  #     namespace: ingress-gw
  # hostnames:
  #   - "tracks.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          # value: /
          value: /trackapi/v1.0/
      # We can also specify the URLRewrite on this level, which will also still be picked up on the APIProduct.
      # filters:
      # - type: URLRewrite
      #   urlRewrite:
      #     path:
      #       type: ReplacePrefixMatch
      #       replacePrefixMatch: /
      backendRefs:
      - name: tracks-rest-api-1-0
        namespace: tracks
        port: 5000
