apiproduct/tracks/tracks-v2-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tracks-v2-apiproduct
  namespace: tracks
  labels:
    app: tracks-rest-api-2.0
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /trackapi/v2.0/
        # method: GET
      # We're using relative matchers, so it seems we need to define the urlrewrite here as well.
      # Simply having that in the parent doesn't seem to work when chaining HTTPRoutes .... as the stiched schema will be empty.
      # But .... the URLRewrite is applied to the request when you only specify it in the parent ... so might also be some stitching logic here that is incorrect.
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      # Local object reference, so needs to be in the same namespace ....
      # - type: ExtensionRef
      #   extensionRef:
      #     group: gateway.solo.io
      #     kind: RouteOption
      #     name: oidc-atv
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: tracks
        namespace: tracks
      # - name: tracks-rest-api-1-0
      #   namespace: tracks
      #   port: 5000
